objects/Multi_Account_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Multi-Account Engagements</relationshipLabel>
        <relationshipName>Briefing_Account</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Enter Purpose, Objective, Attendees details etc.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement__c</fullName>
        <label>Customer Engagement</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>Multi-Account Engagements</relationshipLabel>
        <relationshipName>Briefing_CEE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Num_of_Customer_Attendees__c</fullName>
        <label>Num of Customer Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Customer_Executives__c</fullName>
        <label>Num of Customer Executives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Partner_Attendees__c</fullName>
        <label>Num of Partner Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Multi-Account Engagements</relationshipLabel>
        <relationshipName>Briefing_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Multi-Account Engagement</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi-Account Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>